2010-12-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added FAQ in manual, with first question about trouble when saving a displaycontroller, references #11549

2010-10-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected merging of TypoScript configuration, resolves #10410

2010-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* First public release