@@ -36,7 +36,7 @@ require_once(PATH_tslib . 'class.tslib_pibase.php');
 class tx_displaycontroller extends tslib_pibase implements tx_tesseract_datacontroller_output {
 	public $prefixId	= 'tx_displaycontroller';		// Same as class name
 	public $extKey		= 'displaycontroller';	// The extension key.
-	protected static $consumer; // Contains a reference to the Data Consumer object
+	protected $consumer; // Contains a reference to the Data Consumer object
 	protected $passStructure = TRUE; // Set to FALSE if Data Consumer should not receive the structure
 	protected $debug = FALSE; // Debug flag
 
@@ -180,25 +180,25 @@ class tx_displaycontroller extends tslib_pibase implements tx_tesseract_datacont
 			try {
 				$consumerData = $this->getComponent('consumer');
 				try {
-					self::$consumer = $this->getDataConsumer($consumerData);
+					$this->consumer = $this->getDataConsumer($consumerData);
 						// Pass reference to current object and appropriate TypoScript to consumer
-					self::$consumer->setParentReference($this);
-					$typoscriptConfiguration = isset($GLOBALS['TSFE']->tmpl->setup['plugin.'][self::$consumer->getTypoScriptKey()]) ? $GLOBALS['TSFE']->tmpl->setup['plugin.'][self::$consumer->getTypoScriptKey()] : array();
-					self::$consumer->setTypoScript($typoscriptConfiguration);
-					self::$consumer->setDataFilter($filter);
+					$this->consumer->setParentReference($this);
+					$typoscriptConfiguration = isset($GLOBALS['TSFE']->tmpl->setup['plugin.'][$this->consumer->getTypoScriptKey()]) ? $GLOBALS['TSFE']->tmpl->setup['plugin.'][$this->consumer->getTypoScriptKey()] : array();
+					$this->consumer->setTypoScript($typoscriptConfiguration);
+					$this->consumer->setDataFilter($filter);
 						// If the structure shoud be passed to the consumer, do it now and get the rendered content
 					if ($this->passStructure) {
 							// Check if provided data structure is compatible with Data Consumer
-						if (self::$consumer->acceptsDataStructure($primaryProvider->getProvidedDataStructure())) {
+						if ($this->consumer->acceptsDataStructure($primaryProvider->getProvidedDataStructure())) {
 								// Get the data structure and pass it to the consumer
 							$structure = $primaryProvider->getDataStructure();
 								// Check if there's a redirection configuration
 							$this->handleRedirection($structure);
 								// Pass the data structure to the consumer
-							self::$consumer->setDataStructure($structure);
+							$this->consumer->setDataStructure($structure);
 								// Start the processing and get the rendered data
-							self::$consumer->startProcess();
-							$content = self::$consumer->getResult();
+							$this->consumer->startProcess();
+							$content = $this->consumer->getResult();
 						} else {
 							// TODO: Issue error if data structures are not compatible between provider and consumer
 						}
@@ -208,7 +208,7 @@ class tx_displaycontroller extends tslib_pibase implements tx_tesseract_datacont
 						// (this gives the opportunity to the consumer to render its own error content, for example)
 						// This is achieved by not calling startProcess(), but just getResult()
 					else {
-						$content = self::$consumer->getResult();
+						$content = $this->consumer->getResult();
 					}
 				}
 				catch (Exception $e) {
@@ -588,8 +588,8 @@ class tx_displaycontroller extends tslib_pibase implements tx_tesseract_datacont
 	 * @return	string		The content to display on the website
 	 */
 	public function sub($content, $conf) {
-		self::$consumer->setTypoScript($conf);
-		$content = self::$consumer->getSubResult();
+		$this->consumer->setTypoScript($conf);
+		$content = $this->consumer->getSubResult();
 		return $content;
 	}
 
