@@ -1,5 +1,9 @@
 2010-12-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
+	* Changed consumer member variable from static to "normal" in the displaycontroller workflow, resolves #11390
+
+2010-12-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
 	* Added FAQ in manual, with first question about trouble when saving a displaycontroller, references #11549
 
 2010-10-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>
